--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,6 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# pkgdown site
-docs/
-
 # translation temp files
 po/*~
 
@@ -53,6 +50,6 @@ angsd/
 pcangsd/
 ohana/
 lostruct/
-slurm-log/
+slurm-logs/
 .snakemake/
 *done
