--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,12 @@ vignettes/*.pdf
 .Renviron
 
 # pkgdown site
-docs/
+/docs/
 
 # translation temp files
 po/*~
 
 # RStudio Connect folder
 rsconnect/
+toyfish/slurm-logs
+toyfish/.snakemake
