--- a/workflow/envs/pcangsd.yaml
+++ b/workflow/envs/pcangsd.yaml
@@ -2,8 +2,8 @@ name: pcangsd_lcpipe
 channels:
   - conda-forge
 dependencies:
-  - python==3.12.0
-  - numpy==1.26.2
-  - scipy==1.11.4
-  - cython==3.0.0
-  - gxx==13.2.0
+  - python>=3.6
+  - numpy
+  - scipy
+  - cython
+  - gxx>=13
