updated to most recent version of pcangsd and lostruct

--- a/workflow/envs/lostruct.yaml
+++ b/workflow/envs/lostruct.yaml
@@ -6,4 +6,6 @@ dependencies:
   - r-tidyverse==2.0.0
   - r-devtools==2.4.5
   - r-cowplot==1.1.1
-  - r-stringi
+  - r-stringi==1.8.4
+  - r-data.table==1.15.4
+  - r-rspectra==0.16_1
