--- a/workflow/envs/pcangsd.yaml
+++ b/workflow/envs/pcangsd.yaml
@@ -2,8 +2,7 @@ name: pcangsd_lcpipe
 channels:
   - conda-forge
 dependencies:
-  - python>=3.6
+  - python
   - numpy
   - scipy
   - cython
-  - gxx>=13
