added a note on lostruct window size

--- a/config.yaml
+++ b/config.yaml
@@ -417,6 +417,8 @@ get_theta:
 lostruct:
 
   # Number of SNPs in each window.
+  # Note that since toyfish is already heavily subsetted, we are using a small number here.
+  # You will likely need to enter a much larger number when using a real dataset.
   snp_window_size: 100
   
   # Minimum minor allele frequency filter when running the PCA.
